--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,12 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# Ignore debug build
+rb.exe
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+.vscode/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
