Initial commit for Resources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,17 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.11-3.18)
 project(roads-boats VERSION 0.1.0)
 
-# includes
-include(CPack)
-include(CTest)
-enable_testing()
+set(CMAKE_CXX_STANDARD 20)
 
-# define env
-set(SOURCE src/game.cpp)
+# Add subdirectories
+file(GLOB_RECURSE sources CONFIGURE_DEPENDS src/*.h src/*.cpp)
+
+add_library(rb ${sources})
+target_include_directories(rb PUBLIC include PRIVATE src)
+
+set(MAIN src/game.cpp)
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 
 # create executable
-add_executable(${PROJECT_NAME} ${SOURCE})
+add_executable(${PROJECT_NAME} ${MAIN})
