--- a/tests/Makefile
+++ b/tests/Makefile
@@ -95,5 +95,5 @@ base_test : $(TEST_BUILD_DIR)/base_test.o $(TEST_BUILD_DIR)/gtest_main.a
 
 tile_test : $(TEST_BUILD_DIR)/tile_test.o $(TEST_BUILD_DIR)/gtest_main.a
 	$(MAKE) -C ../
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $(BUILD_DIR)/tiles/Tile.o $(BUILD_DIR)/portables/Resource.o $^ -o $(TEST_BUILD_DIR)/$@
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $(BUILD_DIR)/tiles/Tile.o $(BUILD_DIR)/portables/Resource.o $(BUILD_DIR)/tiles/Sea.o $^ -o $(TEST_BUILD_DIR)/$@
 	$(TEST_BUILD_DIR)/$@.exe
