--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tests/googletest"]
 	path = tests/googletest
 	url = https://github.com/google/googletest.git
+[submodule "libs/stduuid"]
+	path = libs/stduuid
+	url = https://github.com/mariusbancila/stduuid.git
