Pass create_tile_map and get_tile_map tests

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -38,7 +38,7 @@ CXXFLAGS += -g -Wall -Wextra -pthread -std=c++20
 
 # All tests produced by this Makefile.  Remember to add new tests you
 # created to the list.
-TESTS = base_test hex_test river_test area_test tile_test
+TESTS = base_test hex_test river_test area_test tile_test tile_map_test
 
 # All Google Test headers.  Usually you shouldn't change this
 # definition.
@@ -122,5 +122,18 @@ tile_test : $(TEST_BUILD_DIR)/tile_test.o $(TEST_BUILD_DIR)/gtest_main.a
 			$(BUILD_DIR)/tiles/components/Area.o \
 			$(BUILD_DIR)/tiles/components/River.o \
 			$(BUILD_DIR)/tiles/Tile.o \
+			$^ -o $(TEST_BUILD_DIR)/$@
+	$(TEST_BUILD_DIR)/$@.exe
+
+tile_map_test : $(TEST_BUILD_DIR)/tile_map_test.o $(TEST_BUILD_DIR)/gtest_main.a
+	$(MAKE) -C ../
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread \
+			$(BUILD_DIR)/buildings/Building.o \
+			$(BUILD_DIR)/portables/Transporter.o \
+			$(BUILD_DIR)/tiles/components/Hex.o \
+			$(BUILD_DIR)/tiles/components/Area.o \
+			$(BUILD_DIR)/tiles/components/River.o \
+			$(BUILD_DIR)/tiles/Tile.o \
+			$(BUILD_DIR)/tiles/Tile_map.o \
 			$^ -o $(TEST_BUILD_DIR)/$@
 	$(TEST_BUILD_DIR)/$@.exe
