Load Areas from JSON

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -141,7 +141,9 @@ tile_map_test : $(TEST_BUILD_DIR)/tile_map_test.o $(TEST_BUILD_DIR)/gtest_main.a
 file_handler_test : $(TEST_BUILD_DIR)/file_handler_test.o $(TEST_BUILD_DIR)/gtest_main.a
 	$(MAKE) -C ../
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread \
+			$(BUILD_DIR)/buildings/Building.o \
 			$(BUILD_DIR)/tiles/components/Hex.o \
 			$(BUILD_DIR)/tiles/components/River.o \
+			$(BUILD_DIR)/tiles/components/Area.o \
 			$^ -o $(TEST_BUILD_DIR)/$@
 	$(TEST_BUILD_DIR)/$@.exe
