Enable Hex, River, and Area JSON dump/load

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -145,5 +145,6 @@ file_handler_test : $(TEST_BUILD_DIR)/file_handler_test.o $(TEST_BUILD_DIR)/gtes
 			$(BUILD_DIR)/tiles/components/Hex.o \
 			$(BUILD_DIR)/tiles/components/River.o \
 			$(BUILD_DIR)/tiles/components/Area.o \
+			$(BUILD_DIR)/tiles/Tile.o \
 			$^ -o $(TEST_BUILD_DIR)/$@
 	$(TEST_BUILD_DIR)/$@.exe
