Add Resource & Cache classes

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -38,7 +38,7 @@ CXXFLAGS += -g -Wall -Wextra -pthread -std=c++20
 
 # All tests produced by this Makefile.  Remember to add new tests you
 # created to the list.
-TESTS = base_test hex_test river_test area_test tile_test tile_map_test file_handler_test
+TESTS = base_test resource_test hex_test river_test area_test tile_test tile_map_test file_handler_test
 
 # All Google Test headers.  Usually you shouldn't change this
 # definition.
@@ -93,13 +93,17 @@ base_test : $(TEST_BUILD_DIR)/base_test.o $(TEST_BUILD_DIR)/gtest_main.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $(TEST_BUILD_DIR)/$@
 	$(TEST_BUILD_DIR)/$@.exe
 
+resource_test : $(TEST_BUILD_DIR)/resource_test.o $(TEST_BUILD_DIR)/gtest_main.a
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $(TEST_BUILD_DIR)/$@
+	$(TEST_BUILD_DIR)/$@.exe
+
 hex_test : $(TEST_BUILD_DIR)/hex_test.o $(TEST_BUILD_DIR)/gtest_main.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $(BUILD_DIR)/tiles/components/Hex.o $^ -o $(TEST_BUILD_DIR)/$@
 	$(TEST_BUILD_DIR)/$@.exe
 
 river_test : $(TEST_BUILD_DIR)/river_test.o $(TEST_BUILD_DIR)/gtest_main.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread \
-			$(BUILD_DIR)/portables/Transporter.o \
+			$(BUILD_DIR)/portables/transporters/Transporter.o \
 			$(BUILD_DIR)/tiles/components/River.o \
 			$^ -o $(TEST_BUILD_DIR)/$@
 	$(TEST_BUILD_DIR)/$@.exe
@@ -108,8 +112,8 @@ area_test : $(TEST_BUILD_DIR)/area_test.o $(TEST_BUILD_DIR)/gtest_main.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread \
 			$(BUILD_DIR)/buildings/Building.o \
 			$(BUILD_DIR)/players/Player.o \
-			$(BUILD_DIR)/portables/Transporter.o \
-			$(BUILD_DIR)/portables/Resource_cache.o \
+			$(BUILD_DIR)/portables/transporters/Transporter.o \
+			$(BUILD_DIR)/portables/resources/Cache.o \
 			$(BUILD_DIR)/tiles/components/Area.o \
 			$^ -o $(TEST_BUILD_DIR)/$@
 	$(TEST_BUILD_DIR)/$@.exe
@@ -118,8 +122,8 @@ tile_test : $(TEST_BUILD_DIR)/tile_test.o $(TEST_BUILD_DIR)/gtest_main.a
 	$(MAKE) -C ../
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread \
 			$(BUILD_DIR)/buildings/Building.o \
-			$(BUILD_DIR)/portables/Transporter.o \
-			$(BUILD_DIR)/portables/Resource_cache.o \
+			$(BUILD_DIR)/portables/transporters/Transporter.o \
+			$(BUILD_DIR)/portables/resources/Cache.o \
 			$(BUILD_DIR)/tiles/components/Hex.o \
 			$(BUILD_DIR)/tiles/components/Area.o \
 			$(BUILD_DIR)/tiles/components/River.o \
@@ -131,8 +135,8 @@ tile_map_test : $(TEST_BUILD_DIR)/tile_map_test.o $(TEST_BUILD_DIR)/gtest_main.a
 	$(MAKE) -C ../
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread \
 			$(BUILD_DIR)/buildings/Building.o \
-			$(BUILD_DIR)/portables/Transporter.o \
-			$(BUILD_DIR)/portables/Resource_cache.o \
+			$(BUILD_DIR)/portables/transporters/Transporter.o \
+			$(BUILD_DIR)/portables/resources/Cache.o \
 			$(BUILD_DIR)/tiles/components/Hex.o \
 			$(BUILD_DIR)/tiles/components/Area.o \
 			$(BUILD_DIR)/tiles/components/River.o \
@@ -145,7 +149,7 @@ file_handler_test : $(TEST_BUILD_DIR)/file_handler_test.o $(TEST_BUILD_DIR)/gtes
 	$(MAKE) -C ../
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread \
 			$(BUILD_DIR)/buildings/Building.o \
-			$(BUILD_DIR)/portables/Resource_cache.o \
+			$(BUILD_DIR)/portables/resources/Cache.o \
 			$(BUILD_DIR)/tiles/components/Hex.o \
 			$(BUILD_DIR)/tiles/components/River.o \
 			$(BUILD_DIR)/tiles/components/Area.o \
